2018-02-04 Lina Necib  <lnecib@caltech.edu>

	* EnergyCorrelator.cc
	Debugging memory allocation, deleting energyStore/angleStore

	* VERSION
	Making 1.3.1-devel  

2018-01-09 Jesse Thaler  <jthaler@jthaler.net>

	* NEWS
	* VERSION
	Finalizing 1.3.0

2018-01-09 Lina Necib  <lnecib@caltech.edu>

	* NEWS
	Preparing for version candidate

	* VERSION
	Making 1.3.0-rc1

2018-01-07 Lina Necib  <lnecib@caltech.edu>

	* EnergyCorrelator.hh/cc
	Sped up evaluations of ECFs.
	Functions are defined in ECFs and called to evaluate ECFGs.

	* VERSION
	Making 1.2.3-devel


2018-01-04 Lina Necib  <lnecib@caltech.edu>

	* EnergyCorrelator.hh/cc
	Sped up evaluations of ECFG by a factor of 4.
	Refactored some of the code in functions

	* VERSION
	Making 1.2.2-devel

	* example.cc
	Added some timings tests for ECFGs, N2, and N3.


2017-01-25 Jesse Thaler  <jthaler@jthaler.net>

	* EnergyCorrelator.hh/cc
	Converting all _N to unsigned integers, removing _N < 0 warning
	Added warning to constructors for N < 1 in some cases.

	* VERSION
	Making 1.2.1-devel

	* Makefile
	Added -Wextra to compiler flags

2016-10-07 Jesse Thaler  <jthaler@jthaler.net>

	* AUTHORS/COPYING:
	Updated the publication arXiv number to 1609.07483.

	* EnergyCorrelator.hh
	Fixed typo in EnergyCorrelatorGeneralized description

	* NEWS
	Added "USeries" to news.

	* VERSION
	Changed version to 1.2.0

2016-09-27 Lina Necib  <lnecib@mit.edu>

	* EnergyCorrelator.hh/README
	Updated the publication arXiv number to 1609.07483.

2016-09-23 Lina Necib  <lnecib@mit.edu>

	* EnergyCorrelator.cc
	Made the evaluation of ECFG faster by replacing sort -> partial_sort and simplified multiplication syntax
	* example.cc/ref
	Fixed minor typo
	* VERSION
	Changed version to 1.2.0-rc3

2016-09-23 Lina Necib  <lnecib@mit.edu>

	* EnergyCorrelator.hh
	Fixed minor doxygen typo
	* example.cc/ref
	Changed EnergyCorrelatorNormalized -> EnergyCorrelatorGeneralized in function explanations
	* VERSION
	Changed version to 1.2.0-rc2
