@@ -103,8 +103,13 @@ namespace contrib {
             } else {
                 assert(_N <= 5);
             }
-            delete energyStore;
-            delete angleStore;
+            // Deleting arrays
+            delete[] energyStore;
+
+            for (unsigned int i = 0; i < particles.size(); i++) {
+                delete[] angleStore[i];
+            }
+            delete[] angleStore;
 
         } else if (_strategy == slow) {
             if (_N == 3) {
@@ -485,8 +490,13 @@ namespace contrib {
             } else {
                 assert(_N <= 5);
             }
-            delete energyStore;
-            delete angleStore;
+            // Deleting arrays
+            delete[] energyStore;
+
+            for (unsigned int i = 0; i < particles.size(); i++) {
+                delete[] angleStore[i];
+            }
+            delete[] angleStore;
         } else if (_strategy == EnergyCorrelator::slow) {
             if (_N == 3) {
                 unsigned int N_total = 3;
